--- a/scss/_globals.scss
+++ b/scss/_globals.scss
@@ -1,3 +1,5 @@
+@use "./util" as u;
+
 html {
   font-size: 100%;
   box-sizing: border-box;
@@ -8,14 +10,13 @@ html {
 *::after {
   box-sizing: inherit;
 }
-
 body {
   margin: 0;
   padding: 0;
   line-height: 1.3;
   font-family: "Public Sans", sans-serif;
-  font-size: var(--font-med);
-  color: var(--grayishBlue);
+  // font-size: var(--font-med);
+  font-size: u.rem(25);
 }
 
 a,
@@ -55,4 +56,10 @@ button,
   );
   color: var(--white);
   font-weight: 700;
+}
+
+.hide {
+  @include u.breakpoint-down(medium) {
+    display: none;
+  }
 }
