--- a/scss/util/_mixins.scss
+++ b/scss/util/_mixins.scss
@@ -5,16 +5,16 @@
 
 // 640px, 1024px, 1400px
 $breakpoints-up: (
-  "medium": "40em",
-  "large": "64em",
-  "xlarge": "87.5em",
+  "medium": 40em,
+  "large": 64em,
+  "xlarge": 87.5em,
 );
 
 // 639px, 1023px, 1399px
 $breakpoints-down: (
-  "small": "39.9375em",
-  "medium": "63.9375em",
-  "large": "87.94375em",
+  "small": 39.9375em,
+  "medium": 63.9375em,
+  "large": 87.94375em,
 );
 
 @mixin breakpoint-up($size) {
@@ -23,7 +23,7 @@ $breakpoints-down: (
   }
 }
 @mixin breakpoint-down($size) {
-  @media (min-width: map-get($breakpoints-down, $size)) {
+  @media (max-width: map-get($breakpoints-down, $size)) {
     @content;
   }
 }
