--- a/scss/util/_mixins.scss
+++ b/scss/util/_mixins.scss
@@ -1,6 +1,6 @@
 // Breakpoints
 @media (min-width: 64em) {
-  // styles
+  // styles go here
 }
 
 // 640px, 1024px, 1400px
@@ -14,7 +14,7 @@ $breakpoints-up: (
 $breakpoints-down: (
   "small": 39.9375em,
   "medium": 63.9375em,
-  "large": 87.94375em,
+  "large": 87.4375em,
 );
 
 @mixin breakpoint-up($size) {
@@ -22,6 +22,7 @@ $breakpoints-down: (
     @content;
   }
 }
+
 @mixin breakpoint-down($size) {
   @media (max-width: map-get($breakpoints-down, $size)) {
     @content;
