--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,7 +1,37 @@
-@use "./util/" as u;
+@use "./util/" as *;
+
 .header {
+  //hamburger open styles
+  &.open {
+   
+
+    .header__menu {
+      > span:first-child {
+        transform: rotate(45deg);
+      }
+
+      > span:nth-child(2) {
+        opacity: 0;
+      }
+
+      > span:last-child {
+        transform: rotate(-45deg);
+      }
+    }
+  }
+
+  .overlay {
+    opacity: 0;
+    position: fixed;
+    top: rem(60);
+    bottom: 0;
+    right: 0;
+    left: 0;
+    background-image: linear-gradient(to bottom, var(--darkBlue), transparent);
+  }
+
   nav {
-    padding: u.rem(17) u.rem(24);
+    padding: rem(17) rem(24);
   }
 
   &__logo {
@@ -16,12 +46,14 @@
 
     > span {
       display: block;
-      width: 26px;
-      height: 2px;
+      width: rem(26);
+      height: rem(2);
       background-color: var(--darkBlue);
+      transition: all 300ms ease;
+      transform-origin: 3px 1px;
 
       &:not(:last-child) {
-        margin-bottom: 3px;
+        margin-bottom: 5px;
       }
     }
   }
@@ -67,7 +99,7 @@
     font-size: var(--font-sm);
     color: var(--white);
     transition: opacity 300ms ease-in-out;
-    
+
     &:hover {
       opacity: 0.7;
     }
