--- a/scss/_animations.scss
+++ b/scss/_animations.scss
@@ -1,3 +1,7 @@
+.has-fade {
+  visibility: hidden;
+}
+
 @keyframes fade-in {
   from {
     visibility: hidden;
@@ -12,9 +16,8 @@
     opacity: 1;
   }
 }
-
 .fade-in {
-  animation: fade-in 300ms ease-in forwards;
+  animation: fade-in 200ms ease-in-out forwards;
 }
 
 @keyframes fade-out {
@@ -32,5 +35,5 @@
   }
 }
 .fade-out {
-  animation: fade-out 300ms ease-in forwards;
+  animation: fade-out 200ms ease-in-out forwards;
 }
